--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                                  <li><span class="title">Age</span><span class="value">25</span></li>
                                  <li><span class="title">Country</span><span class="value">San José, Costa Rica (GMT-6)</span></li>
                                  <li><span class="title">Email</span><span class="value"> <a href="mailto:antonios.martinez.dev@gmail.com">antonios.martinez.dev@gmail.com</a> </span></li>
-                                 <li><span class="title">Phone</span><span class="value"><a href="tel:50661299074"> +506 6129 9074</a></span></li>
+                                 <li><span class="title">Phone</span><span class="value"><a href="tel:+14243070142"> +1 424 307-0142</a></span></li>
                                  <li><span class="title">Languages</span><span class="value available">Spanish/English/German</span></li>
                                  <li><span class="title">IDE Stack</span><span class="value available">WebStorm/PHPStorm/Navicat/GITBash</span></li>
                               </ul>
