--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                            <div class="col-sm-6 col-md-6 col-lg-6">
                               <ul class="info-list">
                                  <li><span class="title">Age</span><span class="value">25</span></li>
-                                 <li><span class="title">Country</span><span class="value">San José, Costa Rica (GMT-6)</span></li>
+                                 <li><span class="title">Country</span><span class="value">Los Angeles Metropolitan Area</span></li>
                                  <li><span class="title">Email</span><span class="value"> <a href="mailto:antonios.martinez.dev@gmail.com">antonios.martinez.dev@gmail.com</a> </span></li>
                                  <li><span class="title">Phone</span><span class="value"><a href="tel:+14243070142"> +1 424 307-0142</a></span></li>
                                  <li><span class="title">Languages</span><span class="value available">Spanish/English/German</span></li>
