--- a/index.html
+++ b/index.html
@@ -277,7 +277,6 @@ I used a customizable UI Kit called Nebular which already had some security and 
                               <ul>
                                  <li>Experience with Web Service Integrations (SOAP / RESTful)</li>
                                  <li>Experience with JavaScript, HTML and ServiceNow Glide API's.</li>
-                                 <li>PHP Booking Engine</li>
                                  <li>Masive SMTP Email confirmations using PHP MAILER last version. </li>
                                  <li>HTML Landing pages for marketing campaigns and tracking pixels integrations.</li>
                                  <li>Payment gateways integrations using last updated sdks like Braintree, PayPal, Stripe and others.</li>
@@ -285,14 +284,14 @@ I used a customizable UI Kit called Nebular which already had some security and 
                                  <li>Database design and standardization (MySQL).</li>
                                  <li>Queries, Stored Procedures, triggers and functions in Mysql.</li>
                                  <li>Facebook and Google logins integrations.</li>
-                                 <li>PHP Api rest and SOAP APIs.</li>
+                                 <li>PHP API rest and SOAP APIs.</li>
                                  <li>Responsive interfaces with CSS and bootstrap</li>
                                  <li>Async PHP data, ajax and JSON data manage.</li>
-                                 <li>Custom Wordpress, plugins widgets and child themes.</li>
-                                 <li>Websites and Web applications Optimization. (Improving the code, minifying, data compressing, etc).</li>
-                                 <li>Cloudbeds Integrations.</li>
-                                 <li>Scraping with JavaScript.</li>
-                                 <li>Understanding of web master concepts (SSL, IIS, DNS, Reverse proxys, and IP configuration, Cloudflare).</li>
+                                 <li>Custom Wordpress websites, plugins widgets and child themes.</li>
+                                 <li>Websites and Web applications Optimization. (Code minifying, data compressing, server configurations, AWS cloud setup).</li>
+                                 <li>API Cloudbeds Integrations.</li>
+                                 <li>JavaScript Scraping.</li>
+                                 <li>Understanding of web master concepts (cloud, SSL, IIS, DNS, Reverse proxys, and IP configuration, Cloudflare).</li>
                               </ul>
                            </div>
                            <div class="col-sm-6 col-md-6 col-lg-6">
