--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <div class="row">
                            <div class="col-sm-4 col-md-4 col-lg-4">
                               <div class="photo">
-                                 <img src="https://raw.githubusercontent.com/MartinezAntonio/martinezantonio.github.io/master/picture.jpg
+                                 <img src="Screenshot_20201019-172127~2.png
                                     " alt="Antonio Martinez">
                               </div>
                               <div class="photo"> 
