--- a/index.html
+++ b/index.html
@@ -146,8 +146,11 @@ MySQL database design, Cloud deployments, and scalability strategies
                                  <li><span class="title">Email</span><span class="value"> <a href="mailto:antonios.martinez.dev@gmail.com">antonios.martinez.dev@gmail.com</a> </span></li>
                                  <li><span class="title">Phone</span><span class="value"><a href="tel:+14243070142"> +1 424 307-0142</a></span></li>
                                  <li><span class="title">Languages</span><span class="value available">Spanish/English/German</span></li>
-                                 <li><span class="title">No Visa:</span> <span class="value available">Seeking Work Authorization</span> </li>
+                                 <li><span class="title">No Visa:</span> <span class="value available">Seeking Work Authorization or Sponsorship</span> </li>
+<li><span class="title">Hourly rate</span> <span class="value available">USD $20</span> </li>
+                     
                               </ul>
+
                            </div>
                         </div>
                      </div>
