--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@ MySQL database design, Cloud deployments, and scalability strategies
                            <div class="col-sm-6 col-md-6 col-lg-6">
                               <ul class="info-list">
                                  <li><span class="title">Age</span><span class="value">25</span></li>
-                                 <li><span class="title">Location</span><span class="value">Greater Los Angeles Area</span></li>
+                                 <li><span class="title">Location</span><span class="value">San Jose, Costa Rica</span></li>
                                  <li><span class="title">Email</span><span class="value"> <a href="mailto:antonios.martinez.dev@gmail.com">antonios.martinez.dev@gmail.com</a> </span></li>
-                                 <li><span class="title">Phone</span><span class="value"><a href="tel:+14243070142"> +1 424 307-0142</a></span></li>
+                                 <li><span class="title">Phone</span><span class="value"><a href="tel:+50661299074"> +506 6129 9074</a></span></li>
                                  <li><span class="title">Languages</span><span class="value available">Spanish/English/German</span></li>
                                
 <li><span class="title">Hourly rate</span> <span class="value available">USD $20</span> </li>
