--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@ technologies (e.g. Redis)
                                  <div class="skills-info">
                                  </div>
                                  <div class="download-resume">
-                                    <a href="/tech-antonio-martinez.pdf" target="_blank" download class="btn btn-secondary">Download PDF Resume</a>
+                                    <a href="/antonio-resume-v6.pdf" target="_blank" download class="btn btn-secondary">Download PDF Resume</a>
                                  </div>
                               </div>
                            </div>
