--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <div class="row">
                            <div class="col-sm-4 col-md-4 col-lg-4">
                               <div class="photo">
-                                 <img src="foto-2020.jpg" alt="Antonio Martinez">
+                                 <img src="2020.png" alt="Antonio Martinez">
                               </div>
                               <div class="photo"> 
                               </div>
