--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@ technologies (e.g. Redis)
          <!-- /Main Content -->
       </div>
       <footer>
-         <div class="copyrights">2013 to 2020</div>
+         <div class="copyrights">2020</div>
       </footer>
       <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script type="text/javascript" src="js/pages-switcher.js"></script>
       <script type="text/javascript" src="js/imagesloaded.pkgd.min.js"></script>
