--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@ technologies (e.g. Redis)
                                  <div class="skills-info">
                                  </div>
                                  <div class="download-resume">
-                                    <a href="/antonio-web-resume.pdf" target="_blank" download class="btn btn-secondary">Download PDF</a>
+                                    <a href="/antonio-martinez.pdf" target="_blank" download class="btn btn-secondary">Download PDF</a>
                                  </div>
                               </div>
                            </div>
