--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                               <div class="social-links">
                                  <a href="skype:antonio_martinez?julitoporta" target="_blank"><i class="fa fa-skype"></i></a>
                                  <a href="https://github.com/MartinezAntonio" target="_blank"><i class="fa fa-github"></i></a>
-                                 <a href="https://www.linkedin.com/in/antonio-martinez-212572127/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                                 <a href="https://www.linkedin.com/in/antoniomartz/" target="_blank"><i class="fa fa-linkedin"></i></a>
                               </div>
                            </div>
                         </div>
