--- a/index.html
+++ b/index.html
@@ -166,9 +166,19 @@
                               </div>
                               
                               <p>     
-                              Full-stack web developer with 7+ years experience participating in the complete product
+                           Full-stack web developer with 7+ years experience participating in the complete product
 development lifecycle of successfully launched web applications. From backend programming,
-coding in PHP to frontend programming, coding in JavaScript, Angular CLI, HTML5, and CSS3.
+coding in PHP to frontend programming, coding in JavaScript, Angular CLI, HTML5, and CSS3.<br><br> 
+
+Good understanding of object-oriented programming and MVC pattern design. Excellent
+debugging skills and good webmaster concepts in terms of development environment setup
+(lamp, wamp, SSL, DNS, IP configuration, Cloudflare).<br><br>
+
+Good understanding of web services and SOA related standards like REST / OAuth / JSON.
+A day in my life may consist of: prepping a new project in Angular CLI with basic assets, fixing
+some front-end bugs, adding an API Rest endpoint, MySQL database design, configuring a unit
+or UI test library, setting up a build or deployment plan, provisioning a test tier machine or
+feature work.
                               </p>
                               <p>
                               <hr>
