--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@ tasks.
                                  <div class="skills-info">
                                  </div>
                                  <div class="download-resume">
-                                    <a href="/antonio-martinez.pdf" target="_blank" download class="btn btn-secondary">Download PDF</a>
+                                    <a href="/antonio-martinez-resume.pdf" target="_blank" download class="btn btn-secondary">Download PDF</a>
                                  </div>
                               </div>
                            </div>
