--- a/index.html
+++ b/index.html
@@ -138,14 +138,12 @@
                            </div>
                            <div class="col-sm-6 col-md-6 col-lg-6">
                               <ul class="info-list">
-                                 <!--<li><span class="title">Age</span><span class="value">25</span></li>-->
+                                 <li><span class="title">Age</span><span class="value">25</span></li>
                                  <li><span class="title">Location</span><span class="value">San Jose, Costa Rica</span></li>
                                  <li><span class="title">Email</span><span class="value"> <a href="mailto:antonios.martinez.dev@gmail.com">antonios.martinez.dev@gmail.com</a> </span></li>
                                  <li><span class="title">Phone</span><span class="value"><a href="tel:50664173469">+506 6417-3469</a></span></li>
-                                 <li><span class="title">Languages</span><span class="value available">Spanish/English</span></li>
-                             
+                                 <li><span class="title">Languages</span><span class="value available">Spanish/English</span></li>                          
                               </ul>
-
                            </div>
                         </div>
                      </div>
@@ -174,11 +172,10 @@ Good understanding of object-oriented programming and MVC pattern design. Excell
 debugging skills and good webmaster concepts in terms of development environment setup
 (lamp, wamp, SSL, DNS, IP configuration, Cloudflare).<br><br>
 
-Good understanding of web services and SOA related standards like REST / OAuth / JSON.
+Good understanding of web services and SOA related standards like REST / OAuth / JSON.<br><br>
+                                 
 A day in my life may consist of: prepping a new project in Angular CLI with basic assets, fixing
-some front-end bugs, adding an API Rest endpoint, MySQL database design, configuring a unit
-or UI test library, setting up a build or deployment plan, provisioning a test tier machine or
-feature work.
+some front-end bugs, adding an API Rest endpoint, MySQL database design, create some WordPress plugin from scratch, configuring a unit or UI test library, setting up a build or deployment plan, provisioning a test tier machine or feature work.
                               </p>
                               <p>
                               <hr>
