--- a/index.html
+++ b/index.html
@@ -270,9 +270,12 @@ I used a customizable UI Kit called Nebular which already had some security and 
                                        <p class="item-description">Junior Web Developer</p>
                                        <span class="item-small">
                                           
-At Netsoft, I was working on PHP API REST and SOAP Integrations. I also developed API
-from scratch.
-Designed front-end of web application using HTML/CSS and Servlets.
+When I was 18, my first job was at NETSOFT.
+Programming and maintaining ERP systems.
+One of them was Dolibarr, a very robust open-source made in PHP and MySQL.
+I did some things like, develop new reports, migrate and export data in JSON, SQL, and XML
+formats, modify MySQL databases, SMTP emails, design templates with HTML and CSS,
+among some other things.
 
                                           
                                        </span>
