--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                                  </div>
                               </div>
                               <div class="social-links">
-                                 <a href="skype:antonio_martinez?julitoporta" target="_blank"><i class="fa fa-skype"></i></a>
+                                 <a href="https://join.skype.com/invite/vw2u1PTInF0n" target="_blank"><i class="fa fa-skype"></i></a>
                                  <a href="https://github.com/MartinezAntonio" target="_blank"><i class="fa fa-github"></i></a>
                                  <a href="https://www.linkedin.com/in/antoniomartz/" target="_blank"><i class="fa fa-linkedin"></i></a>
                                  <a href="https://www.instagram.com/antoniomartz/" target="_blank"><i class="fa fa-instagram"></i></a>
