--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                      <a class="pt-trigger" href="#home">Home</a><!-- href value = data-id without # of .pt-page. -->
                   </li>
                   <li>
-                     <a class="pt-trigger" href="#resume">Resume</a>
+                     <a class="pt-trigger" href="#resume">Summary</a>
                   </li>
                   <li>
                      <a class="pt-trigger" href="#portfolio">Portfolio</a>
