--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@ tasks.
                                  <div class="skills-info">
                                  </div>
                                  <div class="download-resume">
-                                    <a href="/antonio-resume.pdf" target="_blank" download class="btn btn-secondary">Download PDF</a>
+                                    <a href="/antonio-martinez-2021.pdf" target="_blank" download class="btn btn-secondary">Download PDF</a>
                                  </div>
                               </div>
                            </div>
