--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                                  </div>
                                  <p>
                                    
-                 +7 years of professional career as a Full Stack Web Developer, participating in the product development of successful web applications.
+                 7 years of professional career as a Full Stack Web Developer, participating in the product development of successful web applications.
 
                                     <a href="/#resume">Keep reading</a> <br>
                                  </p>
