--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                                    
                  7 years of professional career as a Full Stack Web Developer, participating in the product development of successful web applications.
 
-                                    <a href="/#resume">Keep reading</a> <br>
+                                    <a href="/#resume">Summary</a> <br>
                                  </p>
                                  <!--      
                                     <p>
