--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@ tasks.
                                  <div class="skills-info">
                                  </div>
                                  <div class="download-resume">
-                                    <a href="/antonio-martinez-2021.pdf" target="_blank" download class="btn btn-secondary">Download PDF</a>
+                                    <a href="/antonio-martinez-web-developer.pdf" target="_blank" download class="btn btn-secondary">Download PDF</a>
                                  </div>
                               </div>
                            </div>
