--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
    <head>
-      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <!-- Global site tag (gtag.js) - Google Analytics g@@@@@//gle -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144353940-3"></script>
       <script>
          window.dataLayer = window.dataLayer || [];
