--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
    <head>
-      <!-- Global site tag (gtag.js) - Google Analytics g@@@@@//gle -->
+      <!-- Global site tag (gtag.js) - Google Analytics -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144353940-3"></script>
       <script>
          window.dataLayer = window.dataLayer || [];
@@ -552,7 +552,7 @@ tasks.
                   
                </div>
             </div>
-            <!-- /Page changer wrapper -->
+            <!-- /Page changer wrapper g@@@@@//gle -->
          </div>
          <!-- /Main Content -->
       </div>
