--- a/index.html
+++ b/index.html
@@ -201,19 +201,13 @@
                                         </div>
                                         <div class="timeline">
                                             <div class="timeline-item">
-                                                <h4 class="item-title">Netsoft</h4>
+                                                <h4 class="item-title">Netsoft Group</h4>
                                                 <span class="item-small">Heredia, Costa Rica</span>
-                                                <p class="item-description">Junior Web Developer</p>
+                                                <p class="item-description">Web developer</p>
                                                 <span class="item-small">
-
-When I was 18, my first job was at NETSOFT.
-Programming and maintaining ERP systems.
-One of them was Dolibarr, a very robust open-source made in PHP and MySQL.
-I did some things like, develop new reports, migrate and export data in JSON, SQL, and XML
-formats, modify MySQL databases, SMTP emails, design templates with HTML and CSS,
-among some other things.
-
-
+                                                    Programming and maintaining ERP systems.
+                                                    One of them was Dolibarr, a very robust open-source made in PHP.
+                                                    I was responsible for things like, develop new custom reports, migrate and export data in JSON and SQL formats, modify MySQL databases, PHP SMTP emails, templates design with HTML and CSS, API integrations.
                                        </span>
                                             </div>
 
@@ -225,11 +219,8 @@ among some other things.
                                                 <span class="item-small">San Jose, Costa Rica</span>
                                                 <p class="item-description">Web Developer</p>
                                                 <span class="item-small">
-At PROFI, I was working on PHP, WordPress, Javascript (Angular CLI and vanilla).
-Some of my web apps included: Custom WordPress plugins and widgets, digital
-menuboards, mobile/desktop business dashboards, online website plugins, and APIs
-integrations. I was also responsible for the managing my team's web infrastructure,
-SEO, marketing and website design.
+                                                    At PROFI, I mostly work with WordPress.
+                                                    Working with project managers and designers, I was responsible for programming custom themes, custom plugins, mega menus, dashboards, reports, forms, landing pages, import, export, and backup websites.
                                        </span>
                                             </div>
                                             <!-- / Experience 2 -->
@@ -243,12 +234,11 @@ SEO, marketing and website design.
                                                 <p class="item-description">Software Development</p>
                                                 <span class="item-small">
 
-At my current position, I am working on a large reporting system for casinos. Giving
-them maintenance and programming new reports and new functions.
-
-We use technologies such as PHP 5.3v, MySQL databases, jQuery, CSS, and AJAX.
-In addition to full-stack development, I also working on a lot of dev-ops tasks. I have
-helped set up a lot of our unit, UI and build/deploy plans.
+                                                    At my current position, I am working on a web reporting system for casinos. Giving
+                                                    the maintenance and programming of new reports, new features, updates, and API integrations.
+                                                    We use technologies such as PHP, MySQL, jQuery, CSS, HTML, AJAX, JSON, Git.
+                                                    In addition to full-stack development, I also working on a lot of server-side tasks. I have
+                                                    helped to set up a lot of development environments and server configurations. (LAMP, WAMP).
 
 
                                        </span>
@@ -268,14 +258,8 @@ helped set up a lot of our unit, UI and build/deploy plans.
                                                 <p class="item-description">Web Developer</p>
                                                 <span class="item-small">
 
-      I was responsible for developing, implementing and maintaining mostly internal web
-applications. I collaborated with technical and business staff in the design,
-development, testing, implementation and production support of enterprise
-applications in PHP and Angular CLI.
-
-We primarily used MEAN Stack. 40% of my work was doing front end development,
-40% back end development and the remaining 20% was dev-ops/sys admin related
-tasks.
+                                                    I was responsible for developing, implementing, and maintaining mostly internal sportsbooks web
+                                                    applications like REST APIs, Websites, and Databases. I collaborated with technical and business staff in the design, development, testing, implementation, and production support of web applications in PHP, JavaScript, Angular CLI, HTML5, CSS3, Git, and some other cool technologies.
 
 
                                        </span>
