--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                                             <div class="timeline-item">
                                                 <h4 class="item-title">PROFI</h4>
                                                 <span class="item-small">San Jose, Costa Rica</span>
-                                                <p class="item-description">Web Developer</p>
+                                                <p class="item-description">Web developer</p>
                                                 <span class="item-small">
                                                     At PROFI, I mostly work with WordPress.
                                                     Working with project managers and designers, I was responsible for programming custom themes, custom plugins, mega menus, dashboards, reports, forms, landing pages, import, export, and backup websites.
@@ -231,7 +231,7 @@
                                             <div class="timeline-item">
                                                 <h4 class="item-title">CIP Reporting</h4>
                                                 <span class="item-small">Chantilly, Virginia</span>
-                                                <p class="item-description">Software Development</p>
+                                                <p class="item-description">Web developer</p>
                                                 <span class="item-small">
 
                                                     At my current position, I am working on a web reporting system for casinos. Giving
@@ -255,7 +255,7 @@
                                             <div class="timeline-item">
                                                 <h4 class="item-title">Jazz Gaming Solutions</h4>
                                                 <span class="item-small">San Jose, Costa Rica</span>
-                                                <p class="item-description">Web Developer</p>
+                                                <p class="item-description">Web developer</p>
                                                 <span class="item-small">
 
                                                     I was responsible for developing, implementing, and maintaining mostly internal sportsbooks web
@@ -510,7 +510,7 @@ version of PHP 8.0 and Webpack JS.
     <!-- /Main Content -->
 </div>
 <footer>
-    <div class="copyrights">2021</div>
+    <div class="copyrights">2021 @</div>
 </footer>
 <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script type="text/javascript" src="js/pages-switcher.js"></script>
 <script type="text/javascript" src="js/imagesloaded.pkgd.min.js"></script>
