--- a/index.html
+++ b/index.html
@@ -125,8 +125,9 @@
                                         <p>
 
                                             7 years of professional career as a web developer, participating in the product development of successful web applications.
+                                            Good understanding of PHP and modern JavaScript ES6. Using OOP programming and MVC pattern design. <br>
 
-                                            <a href="/#resume">Summary</a> <br>
+                                            <a href="/#resume">Read more</a> <br>
                                         </p>
                                         <!--
                                            <p>
@@ -317,9 +318,7 @@ version of PHP 8.0 and Webpack JS.
                                        <div class="block-title">
                                              <h3>Code sample <span>Angular App + PHP Api Rest</span></h3>
                                        </div>
-
                                       <img src="/code.png">
-
                                    </div>
                                </div>
                                </div> -->
@@ -510,7 +509,7 @@ version of PHP 8.0 and Webpack JS.
     <!-- /Main Content -->
 </div>
 <footer>
-    <div class="copyrights">2021 @</div>
+    <div class="copyrights">All rights reserved 2021</div>
 </footer>
 <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script type="text/javascript" src="js/pages-switcher.js"></script>
 <script type="text/javascript" src="js/imagesloaded.pkgd.min.js"></script>
