--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@ version of PHP 8.0 and Webpack JS.
     <!-- /Main Content -->
 </div>
 <footer>
-    <div class="copyrights">All rights reserved 2021</div>
+    <div class="copyrights">All rights reserved © | 2021</div>
 </footer>
 <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script type="text/javascript" src="js/pages-switcher.js"></script>
 <script type="text/javascript" src="js/imagesloaded.pkgd.min.js"></script>
