--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                             <div class="row">
                                 <div class="col-sm-4 col-md-4 col-lg-4">
                                     <div class="photo">
-                                        <img src="https://media-exp1.licdn.com/dms/image/C4D03AQEd72vzs-_IDw/profile-displayphoto-shrink_800_800/0/1619901244945?e=1625702400&v=beta&t=iO1-zaAoA41ULo11QGaXApgM1ihCuIS4VZ2otLl2nHU" alt="Antonio Martinez">
+                                        <img src="foto.png" alt="Antonio Martinez">
                                     </div>
                                     <div class="photo">
                                     </div>
