--- a/index.html
+++ b/index.html
@@ -176,6 +176,8 @@
 
                                         Good understanding of web services and SOA-related standards like REST / OAuth / JSON.
                                         Clean code and strong frontend skills (HTML5, CSS3, Sass, Angular CLI, Bootstrap, jQuery).<br><br>
+                                        
+                                        MySQL databases design, normalization, administration, and SQL optimization. <br><br>
 
                                         A day in my life may consist of: Work with JavaScript promises, design a responsive landing
                                         page, develop a custom WordPress plugin, adding an API endpoint, MySQL database design or
