--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                                         <p>
 
                                             7 years of professional career as a web developer, participating in the product development of successful web applications.
-                                            Good understanding of PHP and modern JavaScript ES6. Using OOP programming and MVC pattern design. <br>
+                                            Good understanding of PHP and modern JavaScript (ES6). Using OOP programming and MVC pattern design. <br>
 
                                             <a href="/#resume">Read more</a> <br>
                                         </p>
