--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                             <div class="row">
                                 <div class="col-sm-4 col-md-4 col-lg-4">
                                     <div class="photo">
-                                        <img src="foto.png" alt="Antonio Martinez">
+                                        <img src="https://media-exp1.licdn.com/dms/image/C4E03AQG8PhKlif_t7g/profile-displayphoto-shrink_800_800/0/1620168656191?e=1625702400&v=beta&t=898COVqpcc0MPrr_S22RfH4PV8bIsdqdPMXc0Xx48FI" alt="Antonio Martinez">
                                     </div>
                                     <div class="photo">
                                     </div>
