--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
                     <li>
                         <a class="pt-trigger" href="#resume">Summary</a>
                     </li>
-                    <!-- <li>
+                    <li>
                         <a class="pt-trigger" href="#portfolio">Portfolio</a>
-                    </li> -->
+                    </li>
                 </ul>
                 <!-- /Main menu -->
             </div>
@@ -127,7 +127,7 @@
                                             7 years of professional career as a web developer, participating in the product development of successful web applications.
                                             Good understanding of PHP and modern JavaScript (ES6). Using OOP programming and MVC pattern design. <br>
 
-                                            <a href="/#resume">Read more</a> <br>
+                                            <a href="/#resume">Read more ::</a> <br>
                                         </p>
                                         <!--
                                            <p>
@@ -162,7 +162,7 @@
                             <div class="row">
                                 <div class="about-me">
                                     <div class="block-title">
-                                        <h3>About <span>Me</span></h3>
+                                        <h3>Summary ::<!--<span>Me</span>-->  </h3>
                                     </div>
 
 
@@ -176,7 +176,7 @@
 
                                         Good understanding of web services and SOA-related standards like REST / OAuth / JSON.
                                         Clean code and strong frontend skills (HTML5, CSS3, Sass, Angular CLI, Bootstrap, jQuery).<br><br>
-                                        
+
                                         MySQL databases design, normalization, administration, and SQL optimization. <br><br>
 
                                         A day in my life may consist of: Work with JavaScript promises, design a responsive landing
@@ -284,25 +284,7 @@ version of PHP 8.0 and Webpack JS.
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-sm-6 col-md-6 col-lg-6">
-                                    <div class="block">
-                                        <div class="block-title">
-                                            <h3> &nbsp; </h3>
-                                        </div>
-                                        <div class="timeline">
-                                            <!-- Experience 1 -->
-                                            <!-- <div class="timeline-item">
-                                               <h4 class="item-title">Bamboo Coding</h4>
-                                               <span class="item-small">Freelance</span>
-                                               <p class="item-description">Web Developer</p>
-                                               </div> -->
-                                            <!-- / Experience 1 -->
-                                            <!-- Experience 2 -->
-                                            <!--  -->
-                                            <!-- / Experience 2 -->
-                                        </div>
-                                    </div>
-                                </div>
+
                             </div>
                             <!--<div class="row custom-code">
                                <div class="class="col-sm-12 col-md-12 col-lg-12"">
@@ -402,7 +384,6 @@ version of PHP 8.0 and Webpack JS.
                 <!-- End of Resume Subpage -->
 
 
-
                 <!-- Portfolio Subpage -->
                 <section class="pt-page" data-id="portfolio">
                     <div class="section-inner custom-page-content">
@@ -410,87 +391,128 @@ version of PHP 8.0 and Webpack JS.
                             <h2>Portfolio</h2>
                         </div>
                         <div class="page-content">
-                            <!-- Portfolio Content -->
-                            <div class="portfolio-content">
-                                <!-- Portfolio Grid -->
-                                <div id="portfolio_grid" class="portfolio-grid portfolio-masonry masonry-grid-3">
+                            <div class="row">
+
+                                <div class="col-sm-6 col-md-6 col-lg-6">
+                                    <div class="block">
+                                        <div class="block-title">
+                                            <h3>Participation :: </h3>
+                                        </div>
+
+                                        <div class="timeline">
+
+                                            <!-- Project 1 -->
+                                            <div class="timeline-item">
 
 
-                                    <figure class="item" data-groups='["all", "media"]'>
+                                                <p class="item-description"><a href="https://mybookie.ag/" target="_blank"><b>mybookie.ag</b>  ↗</a></p>
+                                                <span class="item-small">
 
-                                        <h2><a href="https://plive.ganchrow.com/live/?#!/home" target="_blank">plive.ganchrow.com</a></h2>
+                                       </span>
+                                            </div>
+                                            <!-- Project 1 -->
 
-                                        <hr>
-                                        <img src="https://raw.githubusercontent.com/MartinezAntonio/martinezantonio.github.io/master/ganchrow.PNG" alt="">
+                                            <!-- Project 2 -->
+                                            <div class="timeline-item">
 
-                                    </figure>
+                                                <p class="item-description"><a href="https://oddsandnews.com/" target="_blank"><b>oddsandnews.com</b> ↗</a></p>
+                                                <span class="item-small">
 
+                                       </span>
+                                            </div>
+                                            <!-- Project 2 -->
 
-                                    <figure class="item" data-groups='["all", "media"]'>
+                                            <!-- Project 3 -->
+                                            <div class="timeline-item">
+                                                <p class="item-description"><a href="https://tapiruslodge.com/" target="_blank"><b>tapiruslodge.com</b>  ↗</a></p>
+                                                <span class="item-small">
 
-                                        <h2><a href="https://www.guachipelin.com/" target="_blank">guachipelin.com</a></h2>
-                                        <hr>
-                                        <img src="https://raw.githubusercontent.com/MartinezAntonio/martinezantonio.github.io/master/guachipelin.PNG" alt="">
+                                       </span>
+                                            </div>
+                                            <!-- Project 3 -->
 
-                                    </figure>
+                                            <!-- Project 4 -->
+                                            <div class="timeline-item">
+                                                <p class="item-description"><a href="https://xbet.ag/" target="_blank"><b>xbet.ag</b>  ↗</a></p>
+                                                <span class="item-small">
 
+                                       </span>
+                                            </div>
+                                            <!-- Project 4 -->
 
-                                    <figure class="item" data-groups='["all", "media"]'>
+                                            <!-- Project 5 -->
+                                            <div class="timeline-item">
+                                                <p class="item-description"><a href="https://cipreporting.com/" target="_blank"><b>cipreporting.com</b>  ↗</a></p>
+                                                <span class="item-small">
 
-                                        <h2><a href="https://jazzsports.ag/home/landing" target="_blank">jazzsports.ag</a></h2>
-                                        <hr>
-                                        <img src="https://raw.githubusercontent.com/MartinezAntonio/martinezantonio.github.io/master/jazz.PNG" alt="">
-
-                                    </figure>
-
-
-                                    <figure class="item" data-groups='["all", "media"]'>
-
-                                        <h2><a href="https://www.scoresandodds.com/" target="_blank">scoresandodds.com</a></h2>
-
-                                        <hr>
-                                        <img src="https://raw.githubusercontent.com/MartinezAntonio/martinezantonio.github.io/master/ganchrow.PNG" alt="">
-
-                                    </figure>
-
-
-
-
-                                    <figure class="item" data-groups='["all", "media"]'>
-
-                                        <h2><a href="https://www.tabacon.com/" target="_blank">tabacon.com</a></h2>
-                                        <hr>
-                                        <img src="https://raw.githubusercontent.com/MartinezAntonio/martinezantonio.github.io/master/tabacon_tech.PNG" alt="">
-
-                                    </figure>
-
-
-
-                                    <figure class="item" data-groups='["all", "media"]'>
-
-                                        <h2><a href="https://www.toyotacr.com/" target="_blank">toyotacr.com</a></h2>
-                                        <hr>
-                                        <img src="https://raw.githubusercontent.com/MartinezAntonio/martinezantonio.github.io/master/toyota.PNG" alt="">
-
-                                    </figure>
+                                       </span>
+                                            </div>
+                                            <!-- Project 5 -->
 
 
 
-                                    <figure class="item" data-groups='["all", "media"]'>
+                                            <!-- Project 6 -->
+                                            <div class="timeline-item">
+                                                <p class="item-description"><a href="https://jazzsports.ag/" target="_blank"><b>jazzsports.ag</b>  ↗</a></p>
+                                                <span class="item-small">
 
-                                        <h2><a href="https://www.stayincostarica.com/" target="_blank">stayincostarica.com</a></h2>
-                                        <hr>
-                                        <img src="https://raw.githubusercontent.com/MartinezAntonio/martinezantonio.github.io/master/stayin.PNG" alt="">
+                                       </span>
+                                            </div>
+                                            <!-- Project 6 -->
 
-                                    </figure>
+                                            <!-- Project 7 -->
+                                            <div class="timeline-item">
+                                                <p class="item-description"><a href="https://scoresandodds.com" target="_blank"><b>scoresandodds.com</b>  ↗</a></p>
+                                                <span class="item-small">
+
+                                       </span>
+                                            </div>
+                                            <!-- Project 7 -->
+
+                                            <!-- Project 8 -->
+                                            <div class="timeline-item">
+                                                <p class="item-description"><a href="https://stayincostarica.com/" target="_blank"><b>stayincostarica.com</b>  ↗</a></p>
+                                                <span class="item-small">
+
+                                       </span>
+                                            </div>
+                                            <!-- Project 8 -->
+
+                                            <!-- Project 9 -->
+                                            <div class="timeline-item">
+                                                <p class="item-description"><a href="https://tabacon.com/" target="_blank"><b>tabacon.com</b>  ↗</a></p>
+                                                <span class="item-small">
+
+                                       </span>
+                                            </div>
+                                            <!-- Project 9 -->
+
+                                            <!-- Project 10 -->
+                                            <div class="timeline-item">
+                                                <p class="item-description"><a href="https://www.guachipelin.com/" target="_blank"><b>guachipelin.com</b>  ↗</a></p>
+                                                <span class="item-small">
+
+                                       </span>
+                                            </div>
+                                            <!-- Project 10 -->
 
 
+
+
+                                        </div>
+                                    </div>
                                 </div>
-                                <!-- /Portfolio Content -->
+
                             </div>
+
                         </div>
+                    </div>
                 </section>
                 <!-- /Portfolio Subpage -->
+
+
+
+
 
 
 
