--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@ version of PHP 8.0 and Webpack JS.
                                             <div class="timeline-item">
 
 
-                                                <p class="item-description"><a href="https://mybookie.ag/" target="_blank"><b>mybookie.ag</b>  ↗</a></p>
+                                                <p class="item-description"><a href="https://mybookie.ag/" target="_blank"><b>mybookie.ag</b> <i class="fa fa-arrow-circle-o-up"></i> </a></p>
                                                 <span class="item-small">
 
                                        </span>
@@ -415,7 +415,7 @@ version of PHP 8.0 and Webpack JS.
                                             <!-- Project 2 -->
                                             <div class="timeline-item">
 
-                                                <p class="item-description"><a href="https://oddsandnews.com/" target="_blank"><b>oddsandnews.com</b> ↗</a></p>
+                                                <p class="item-description"><a href="https://oddsandnews.com/" target="_blank"><b>oddsandnews.com</b> <i class="fa fa-arrow-circle-o-up"></i></a></p>
                                                 <span class="item-small">
 
                                        </span>
@@ -424,7 +424,7 @@ version of PHP 8.0 and Webpack JS.
 
                                             <!-- Project 3 -->
                                             <div class="timeline-item">
-                                                <p class="item-description"><a href="https://tapiruslodge.com/" target="_blank"><b>tapiruslodge.com</b>  ↗</a></p>
+                                                <p class="item-description"><a href="https://tapiruslodge.com/" target="_blank"><b>tapiruslodge.com</b>  <i class="fa fa-arrow-circle-o-up"></i></a></p>
                                                 <span class="item-small">
 
                                        </span>
@@ -433,7 +433,7 @@ version of PHP 8.0 and Webpack JS.
 
                                             <!-- Project 4 -->
                                             <div class="timeline-item">
-                                                <p class="item-description"><a href="https://xbet.ag/" target="_blank"><b>xbet.ag</b>  ↗</a></p>
+                                                <p class="item-description"><a href="https://xbet.ag/" target="_blank"><b>xbet.ag</b>  <i class="fa fa-arrow-circle-o-up"></i></a></p>
                                                 <span class="item-small">
 
                                        </span>
@@ -442,7 +442,7 @@ version of PHP 8.0 and Webpack JS.
 
                                             <!-- Project 5 -->
                                             <div class="timeline-item">
-                                                <p class="item-description"><a href="https://cipreporting.com/" target="_blank"><b>cipreporting.com</b>  ↗</a></p>
+                                                <p class="item-description"><a href="https://cipreporting.com/" target="_blank"><b>cipreporting.com</b>  <i class="fa fa-arrow-circle-o-up"></i></a></p>
                                                 <span class="item-small">
 
                                        </span>
@@ -453,7 +453,7 @@ version of PHP 8.0 and Webpack JS.
 
                                             <!-- Project 6 -->
                                             <div class="timeline-item">
-                                                <p class="item-description"><a href="https://jazzsports.ag/" target="_blank"><b>jazzsports.ag</b>  ↗</a></p>
+                                                <p class="item-description"><a href="https://jazzsports.ag/" target="_blank"><b>jazzsports.ag</b>  <i class="fa fa-arrow-circle-o-up"></i></a></p>
                                                 <span class="item-small">
 
                                        </span>
@@ -462,7 +462,7 @@ version of PHP 8.0 and Webpack JS.
 
                                             <!-- Project 7 -->
                                             <div class="timeline-item">
-                                                <p class="item-description"><a href="https://scoresandodds.com" target="_blank"><b>scoresandodds.com</b>  ↗</a></p>
+                                                <p class="item-description"><a href="https://scoresandodds.com" target="_blank"><b>scoresandodds.com</b>  <i class="fa fa-arrow-circle-o-up"></i></a></p>
                                                 <span class="item-small">
 
                                        </span>
@@ -471,7 +471,7 @@ version of PHP 8.0 and Webpack JS.
 
                                             <!-- Project 8 -->
                                             <div class="timeline-item">
-                                                <p class="item-description"><a href="https://stayincostarica.com/" target="_blank"><b>stayincostarica.com</b>  ↗</a></p>
+                                                <p class="item-description"><a href="https://stayincostarica.com/" target="_blank"><b>stayincostarica.com</b>  <i class="fa fa-arrow-circle-o-up"></i></a></p>
                                                 <span class="item-small">
 
                                        </span>
@@ -480,7 +480,7 @@ version of PHP 8.0 and Webpack JS.
 
                                             <!-- Project 9 -->
                                             <div class="timeline-item">
-                                                <p class="item-description"><a href="https://tabacon.com/" target="_blank"><b>tabacon.com</b>  ↗</a></p>
+                                                <p class="item-description"><a href="https://tabacon.com/" target="_blank"><b>tabacon.com</b>  <i class="fa fa-arrow-circle-o-up"></i></a></p>
                                                 <span class="item-small">
 
                                        </span>
@@ -489,7 +489,7 @@ version of PHP 8.0 and Webpack JS.
 
                                             <!-- Project 10 -->
                                             <div class="timeline-item">
-                                                <p class="item-description"><a href="https://www.guachipelin.com/" target="_blank"><b>guachipelin.com</b>  ↗</a></p>
+                                                <p class="item-description"><a href="https://www.guachipelin.com/" target="_blank"><b>guachipelin.com</b>  <i class="fa fa-arrow-circle-o-up"></i></a></p>
                                                 <span class="item-small">
 
                                        </span>
